Fix the invisible text color for completion suggestions (#7)
* Ignore `.sass-cache/`

* Fix the invisible text color for completion suggestions

Currently, the autocomplete suggestions are invisible because they have
the same text and background colors, except when an item is highlighted.
This patch sets the text color to the primary white color.

--- a/input.scss
+++ b/input.scss
@@ -29,3 +29,7 @@ form.aui option,
     background: $secondary !important;
     color: $primary !important;
 }
+
+.atlassian-autocomplete .suggestions li {
+    color: $primary;
+}
